@@ -1,12 +1,12 @@
 package com.arloor.forwardproxy.util;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
+import com.arloor.forwardproxy.vo.RenderParam;
 import org.thymeleaf.TemplateEngine;
 import org.thymeleaf.context.Context;
 import org.thymeleaf.templatemode.TemplateMode;
 import org.thymeleaf.templateresolver.StringTemplateResolver;
 
+import java.util.List;
 import java.util.Map;
 
 public class RenderUtil {
@@ -33,27 +33,27 @@ public class RenderUtil {
      * 使用 Thymeleaf 渲染 Text模版
      * Text模版语法见：https://www.thymeleaf.org/doc/tutorials/3.0/usingthymeleaf.html#textual-syntax
      *
-     * @param template 模版
-     * @param params   参数
+     * @param template    模版
+     * @param renderParam 参数
      * @return 渲染后的Text
      */
-    public static String text(String template, Map<String, Object> params) {
+    public static String text(String template, RenderParam renderParam) {
 
         Context context = new Context();
-        context.setVariables(params);
+        context.setVariables(renderParam.getContent());
         return textEngine.process(template, context);
     }
 
     /**
      * 使用 Thymeleaf 渲染 Html模版
      *
-     * @param template Html模版
-     * @param params   参数
+     * @param template    Html模版
+     * @param renderParam 参数
      * @return 渲染后的html
      */
-    public static String html(String template, Map<String, Object> params) {
+    public static String html(String template, RenderParam renderParam) {
         Context context = new Context();
-        context.setVariables(params);
+        context.setVariables(renderParam.getContent());
         return htmlEngine.process(template, context);
     }
 
@@ -65,7 +65,7 @@ public class RenderUtil {
     public static void main(String[] args) {
         // 渲染String
         String string_template = "这是[(${name.toString()})]"; // 直接name其实就行了，这里就是展示能调用java对象的方法
-        String value = RenderUtil.text(string_template, ImmutableMap.of("name", "ARLOOR"));
+        String value = RenderUtil.text(string_template, new RenderParam().add("name", "ARLOOR"));
         System.out.println(value);
 
         // 渲染List
@@ -74,10 +74,11 @@ public class RenderUtil {
          *   - [(${item})]
          * [/]
          */
-        String list_template = "[# th:each=\"item : ${items}\"]\n" +
-                "  - [(${item})]\n" +
-                "[/]";
-        String value1 = RenderUtil.text(list_template, ImmutableMap.of("items", Lists.newArrayList("第一个", "第二个")));
+        String list_template = """
+                [# th:each="item : ${items}"]
+                  - [(${item})]
+                [/]""";
+        String value1 = RenderUtil.text(list_template, new RenderParam().add("items", List.of("第一个", "第二个", "第三个")));
         System.out.println(value1);
 
         // 渲染Map
@@ -86,14 +87,15 @@ public class RenderUtil {
          *   - [(${map.get(key)})]
          * [/]
          */
-        String map_template = "[# th:each=\"key : ${map.keySet()}\"]\n" +
-                " 这是 - [(${map.get(key)})]\n" +
-                "[/]";
-        String value2 = RenderUtil.text(map_template, ImmutableMap.of("map", ImmutableMap.of("a", "甲", "b", "乙")));
+        String map_template = """
+                [# th:each="key : ${map.keySet()}"]
+                 这是 - [(${map.get(key)})]
+                [/]""";
+        String value2 = RenderUtil.text(map_template, new RenderParam().add("map", Map.of("a", "b", "c", "d")));
         System.out.println(value2);
 
         String html_template = "这是<span th:text=\"${name}\"></span>";
-        System.out.println(RenderUtil.html(html_template, ImmutableMap.of("name", "ARLOOR")));
+        System.out.println(RenderUtil.html(html_template, new RenderParam().add("name", "ARLOOR")));
 
     }
 }
